// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`t-key > can use t-key directive on a node 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { keyOf, safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const tKey_1 = keyOf(ctx['beer'].id);
    const b2 = toggler(tKey_1, safeOutput(ctx['beer'].name, tKey_1 + key + \`__1\`));
    return toggler(tKey_1, block1([], [b2]));
  }
}"
`;

exports[`t-key > can use t-key directive on a node 2 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { keyOf, safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const tKey_1 = keyOf(ctx['beer'].id);
    const b2 = toggler(tKey_1, safeOutput(ctx['beer'].name, tKey_1 + key + \`__1\`));
    return toggler(tKey_1, block1([], [b2]));
  }
}"
`;

exports[`t-key > can use t-key directive on a node as a function 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { keyOf, safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const tKey_1 = keyOf(ctx['getKey'](ctx['beer']));
    const b2 = toggler(tKey_1, safeOutput(ctx['beer'].name, tKey_1 + key + \`__1\`));
    return toggler(tKey_1, block1([], [b2]));
  }
}"
`;

exports[`t-key > t-call under a t-key inside a node keeps its content 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { keyOf, zero, callTemplate } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const tKey_1 = keyOf(ctx['k']);
    const b2 = toggler(tKey_1, callTemplate(\`sub\`, this, app, Object.assign(Object.create(ctx), {[zero]: null}), node, tKey_1 + key + \`__1\`));
    return block1([], [b2]);
  }
}"
`;

exports[`t-key > t-call under a t-key inside a node keeps its content 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<span>sub</span>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`t-key > t-key directive in a list 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, safeOutput, withKey, keyOf } = helpers;
  
  let block1 = createBlock(\`<ul><block-child-0/></ul>\`);
  let block3 = createBlock(\`<li><block-child-0/></li>\`);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block2, v_block2, l_block2, c_block2] = prepareList(ctx['beers']);
    for (let i1 = 0; i1 < l_block2; i1++) {
      let ctx = Object.create(ctx1);
      ctx[\`beer\`] = k_block2[i1];
      const key1 = ctx['beer'].id;
      const skey1 = keyOf(key1);
      const b4 = safeOutput(ctx['beer'].name, key + \`__1__\${skey1}\`);
      c_block2[i1] = withKey(block3([], [b4]), key1);
    }
    const b2 = list(c_block2);
    return block1([], [b2]);
  }
}"
`;

exports[`t-key > t-key on a t inside a node keeps its content 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { keyOf } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const tKey_1 = keyOf(ctx['k']);
    const b2 = toggler(tKey_1, text(\`hello\`));
    return block1([], [b2]);
  }
}"
`;

exports[`t-key > t-key on a t inside a node keeps its content 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { keyOf } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    let b2;
    const tKey_1 = keyOf(ctx['k']);
    let b3;
    if (ctx['c']) {
      b3 = text(\`yes\`);
    }
    b2 = toggler(tKey_1, multi([b3]));
    return block1([], [b2]);
  }
}"
`;

exports[`t-key > t-key on a t inside a node keeps its content 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { keyOf } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  let block3 = createBlock(\`<b/>\`);
  let block4 = createBlock(\`<i/>\`);
  
  return function template(ctx, node, key = "") {
    const tKey_1 = keyOf(ctx['k']);
    const b3 = block3();
    const b4 = block4();
    const b2 = toggler(tKey_1, multi([b3, b4]));
    return block1([], [b2]);
  }
}"
`;

exports[`t-key > t-key on sub dom node pushes a child block in its parent 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { keyOf } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  let block2 = createBlock(\`<span/>\`);
  let block3 = createBlock(\`<div><h1/></div>\`);
  
  return function template(ctx, node, key = "") {
    let b2, b3;
    if (ctx['hasSpan']) {
      b2 = block2();
    }
    const tKey_1 = keyOf(ctx['key']);
    b3 = toggler(tKey_1, block3());
    return block1([], [b2, b3]);
  }
}"
`;

exports[`t-key > t-key on sub dom node pushes a child block in its parent 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { keyOf } = helpers;
  
  let block1 = createBlock(\`<div><h1/></div>\`);
  
  return function template(ctx, node, key = "") {
    const tKey_1 = keyOf(ctx['key']);
    return toggler(tKey_1, block1());
  }
}"
`;

exports[`t-key > t-key: interaction with t-out 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { keyOf, safeOutput } = helpers;
  
  let block1 = createBlock(\`<p><block-child-0/></p>\`);
  
  return function template(ctx, node, key = "") {
    const tKey_1 = keyOf(ctx['key']);
    const b2 = toggler(tKey_1, safeOutput(ctx['text'], tKey_1 + key + \`__1\`));
    return toggler(tKey_1, block1([], [b2]));
  }
}"
`;
